--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,3 +84,16 @@ h1 {
     @apply bg-background text-foreground;
   }
 }
+
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.8);
+  z-index: 9999;
+}
